titles and spacing fix

--- a/skin/frontend/default/rooja/css/styles.css
+++ b/skin/frontend/default/rooja/css/styles.css
@@ -1213,11 +1213,8 @@ fieldset .email-invite {background:#e0e0e0;}
 
 .page-invite {background:#c8d7da;}
 
-
-
 input.invite-input {height: 40px;}
-input.invite-button{height: 40px; color: #fff; font-size:14px; padding: 0px 10px;}
-
+input.invite-button{height: 40px; color: #fff; font-size:14px; padding: 0px 10px; background: #868686;}
 
 /* ======================================================================================= */
 
